--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -307,7 +307,7 @@
                     margin-bottom: 2rem;
                     color: $white;
                     text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
-                    transform: rotate(-2deg);
+                    // transform: rotate(-2deg);
                 }
 
                 .heroPackageBtn {
