--- a/scss/pages/_hotels.scss
+++ b/scss/pages/_hotels.scss
@@ -33,7 +33,7 @@
                 font-size: 1.5rem;
                 color: $cosmicOrange;
                 margin-bottom: -0.5rem;
-                transform: rotate(-2deg);
+                // transform: rotate(-2deg);
             }
 
             .hotels-page-title {
